# hotdog-not-hotdog

./: CMakeLists.txt  README.md
include/: cudnn_util.h
src/: DataLoader.cpp  DataLoader.h  main.cpp
